--- a/index.html
+++ b/index.html
@@ -148,9 +148,8 @@
 
                     let div = document.createElement("div")
                     description.innerText = annotation.name
-                    score.innerText = annotation.score
 
-                    div.append(description, score)
+                    div.append(description)
 
                     results.append(div)
                   }
