Object Detection and Text Detection

--- a/index_face.html
+++ b/index_face.html
@@ -2,10 +2,6 @@
   <head>
     <style>
       #results {
-        position: fixed;
-        top: 50px;
-        left: 10px;
-        color: white;
       }
 
       #results span {
@@ -13,9 +9,8 @@
       }
 
       video {
-        position: fixed;
-        top: 0;
-        left: 0;
+        border: 2px solid grey;
+        padding: 3px;
       }
 
       h1 {
@@ -25,9 +20,7 @@
       }
 
       button {
-        position: fixed;
-        top: 0;
-        left: 0;
+        margin: 5px;
       }
     </style>
   </head>
